<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@android:color/white"
        android:elevation="4dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent" android:layout_height="wrap_content">
        <EditText
            android:id="@+id/exerciseInput"
            android:hint="@string/add_exercise"
            android:layout_weight="1"
            android:layout_width="0dp" android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/addExerciseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/add" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exerciseList"
        android:layout_width="match_parent" android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/saveDayButton"
        android:text="@string/save_day"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="12dp"/>

</LinearLayout>
